# qucs_s

./: .clang-format  .clangd  .gitignore  .gitmodules  AppImageBuilder.yml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  NEWS.md  README.md  README_qucs  compile_flags.txt  config.h.cmake  configure.ac  qucsgui.cbp
converter/: CMakeLists.txt  check_dataset.cpp  check_vcd.h  complex.cpp  complex.h  csv_producer.cpp  dataset.cpp  logging.c  logging.h  matvec.cpp  netdefs.h  parse_dataset.ypp  parse_vcd.ypp  precision.h  property.cpp  qucs_producer.cpp  qucs_producer_old.cpp  qucs_typedefs.h  qucsconv.cpp  qucsconv_old.cpp  qucsdefs.h  real.cpp  real.h  scan_dataset.lpp  scan_vcd.lpp  strlist.cpp  strlist.h  variable.h  vector.cpp
examples/: CMakeLists.txt  Mixer_FFT.sch
examples/ngspice/: 2N3904_follower.sch  555timer_osc.sch  B-sources.sch  B-sources_updated.sch  BJT-dist.sch  BJT-four.sch  BJT-noise.sch  BJT-swp.dat.ngspice  BJT-swp.sch  BJT.sch  BJT_Phase_Shift_Osc.sch  BJT_TEMPER_swp.sch  BJT_T_swp.sch  BJT_ac_tran.sch  BJT_dc.sch  BJT_dc_curves.sch  BJT_dc_ngspice.sch  Distortion.sch  EDD-Q-test.sch  Full_wave.sch  RC_filter_FFT.sch  Relay.sch  Sawtooth-discreet.sch  Signetics_NE520.sch  SmithChartTest.sch  TestFNXSPICEDC.sch  Test_tran_coup.sch  Triangle_Wave_Generator.sch  X5_500.sch  XTAL_colpitts.sch  active_mixer.sch  audio_amp_thd.sch  classic_osci_2.sch  colpitts_base.sch  diode.sch  fhr01fh.sch  gilbert.sch  groupdelay_ac.sch  nutmeg_script.sch  quarz_test.dat.ngspice  (+8 more)
examples/qucsator/: bpf_10Ghz.sch
examples/symbols/: schematic_symbols.sch  symbols_blank.sch  symbols_optos.sch  symbols_transformers.sch
examples/templates_ngspice/: AC_Passive_analysis.sch  AC_TRAN_Active_Filter_analysis.sch  AC_TRAN_FOUR_OpAmp.sch  AC_TRAN_OpAmp.sch  Monte_Carlo.sch  Pass_Parameters_Subcircuit.sch  Pwr-Amp_DC_analysis.sch  Pwr-Amp_wingspread_analysis.sch  PwrAmpTHD.sch  S-parameter_active_analysis.sch  S-parameter_file_analysis.sch  S-parameter_passive_analysis.sch  TRAN_FFT_OpAmp.sch  TRAN_FOUR_OpAmp.sch  genericopa.cir  genericopa_sub.sch
examples/xyce/: BJT_DC_xyce.sch  Xyce2ToneTest_mod.sch  hb-test.sch  s_param_lc_filter.sch  s_param_wideband_amp.sch  sensitivityDC.sch  sensitivityTRAN.sch
qucs/: CMakeLists.txt  Makefile.am  conductor.h  element.cpp  element.h  healer.cpp  healer.h  imagewriter.cpp  imagewriter.h  main.cpp  main.h  messagedock.cpp  messagedock.h  misc.cpp  misc.h  mnemo.cpp  module.cpp  module.h  module_xml.cpp  mouseactions.cpp  mouseactions.h  node.cpp  node.h  octave_window.cpp  octave_window.h  printerwriter.cpp  printerwriter.h  projectView.cpp  projectView.h  qucs-s.1  qucs-s.desktop  qucs.cpp  qucs.h  qucs.qrc  qucs_actions.cpp  qucs_icon.rc  qucs_init.cpp  qucs_run_hdl  qucs_run_hdl.bat  qucs_run_verilog  (+28 more)
qucs-activefilter/: CMakeLists.txt  filter.cpp  filter.h  helpdialog.cpp  helpdialog.h  main.cpp  mfbfilter.cpp  mfbfilter.h  qf_matrix.h  qf_poly.cpp  qf_poly.h  qucsactivefilter.1  qucsactivefilter.cpp  qucsactivefilter.h  sallenkey.cpp  sallenkey.h  schcauer.cpp  schcauer.h  transferfuncdialog.cpp  transferfuncdialog.h
qucs-attenuator/: CMakeLists.txt  attenuatorfunc.cpp  attenuatorfunc.h  main.cpp  qucsattenuator.1  qucsattenuator.cpp  qucsattenuator.h  qucsattenuator.qrc
qucs-filter/: CMakeLists.txt  cline_filter.cpp  cline_filter.h  eqn_filter.cpp  eqn_filter.h  filter.cpp  filter.h  helpdialog.cpp  helpdialog.h  lc_filter.cpp  lc_filter.h  line_filter.cpp  line_filter.h  main.cpp  material_props.h  qf_cauer.cpp  qf_cauer.h  qf_elliptic_functions.h  qf_filter.cpp  qf_filter.h  qf_math.h  qf_matrix.h  qf_poly.cpp  qf_poly.h  qf_subsection.h  quarterwave_filter.cpp  quarterwave_filter.h  qucsfilter.1  qucsfilter.cpp  qucsfilter.h  stepz_filter.cpp  stepz_filter.h  tl_filter.cpp  tl_filter.h
qucs-powercombining/: CMakeLists.txt  main.cpp  qucspowercombining.1  qucspowercombiningtool.cpp  qucspowercombiningtool.h
qucs-rescodes/: CMakeLists.txt  main.cpp  qucsrescodes.1
qucs-s-spar-viewer/: CMakeLists.txt  Doxyfile  README.md  codeeditor.cpp  codeeditor.h  main.cpp  matrixcombopopup.cpp  matrixcombopopup.h  polarplotwidget.cpp  polarplotwidget.h  qucs-s-spar-viewer.cpp  qucs-s-spar-viewer.h  qucs-s-spar-viewer.qrc  qucsattenuator.cpp  rectangularplotwidget.cpp  rectangularplotwidget.h  smithchartwidget.cpp  smithchartwidget.h
qucs-s-spar-viewer/CustomWidgets/: codeeditor.cpp  codeeditor.h  matrixcombopopup.cpp  matrixcombopopup.h
qucs-s-spar-viewer/Filtering/: CanonicalFilter.cpp  CanonicalFilter.h  FilterDesignTool.cpp  FilterDesignTool.h  LowpassPrototypeCoeffs.h
qucs-s-spar-viewer/MainWindow/: dataset_management.cpp  qucs-s-spar-viewer.h  read_Sparam_data_files.cpp  tools.cpp
qucs-s-spar-viewer/Misc/: general.cpp  general.h  readTouchstone.cpp
qucs-s-spar-viewer/PlotWidgets/: polarplotwidget.cpp  polarplotwidget.h  rectangularplotwidget.cpp  rectangularplotwidget.h  smithchartwidget.cpp  smithchartwidget.h
qucs-s-spar-viewer/SPAR/: SParameterCalculator.cpp  SParameterCalculator.h  matrix_operations.cpp  misc.cpp  output.cpp  parser.cpp
qucs-s-spar-viewer/Schematic/: Network.h  SchematicContent.cpp  SchematicContent.h  component.cpp  component.h  graphwidget.cpp  graphwidget.h  infoclasses.h  node.cpp  node.h  structures.cpp  structures.h  substrates.cpp  symbol.h  wire.cpp  wire.h
qucs-s-spar-viewer/UI/: dataset_management.cpp  limits.cpp  markers.cpp  qucs-s-spar-viewer.cpp  qucs-s-spar-viewer.h  read_Sparam_data_files.cpp  session_management.cpp  simulationsetup.cpp  simulationsetup.h  tools.cpp  trace_management.cpp
qucs-transcalc/: CMakeLists.txt  c_microstrip.cpp  c_microstrip.h  coax.cpp  coax.h  coplanar.cpp  coplanar.h  helpdialog.cpp  helpdialog.h  main.cpp  microstrip.cpp  microstrip.h  optionsdialog.cpp  optionsdialog.h  qucstrans.1  qucstrans.cpp  qucstrans.h  rectwaveguide.cpp  rectwaveguide.h  stripline.cpp  stripline.h  transline.cpp  transline.h  units.h
tests/: CMakeLists.txt  test_ngspice_integration.cpp  test_ngspice_kernel.cpp  test_simulation_types.cpp
(+1389 files in other folders)
