
SET(DIST_EXAMPLES_DATA
active_bp.sch
active_lp.sch
active_mixer.sch
Amp_Baseband_Low-noise.sch
Amp_Two_Tone.sch
bbv.sch
boostconverter.sch
bpf_10Ghz.sch
BPF_1550_edge_cpld.sch
BPF_2000_Co-ax.sch
bridge.sch
buckboost.sch
buckconverter.sch
charac.sch
chargepump.sch
chebyshev1_5th.sch
classic_osci.sch
colpitts.sch
colpitts_base.sch
Comb_Gen.sch
diff1.sch
diode_hb.sch
elliptic_5th.sch
fet.sch
fet_noise.sch
fgummel.sch
fhr01fh.sch
filter_optimization.sch
flicker.sch
fullwaverectifier_1.sch
fullwaverectifier_2.sch
gain.sch
giacoletto.sch
gilbert.sch
groupdelay_ac.sch
groupdelay_sp.sch
gyrator.sch
IdealBalun.sch
lc_osc.sch
lf_osci.sch
LPF-Balun2.sch
LPF-Balun3.sch
LPF_1000_Coplanar.sch
LPF_1000_Radial-Stub.sch
LPF_1250_Elliptical.sch
microstrip.sch
mixer.sch
mscoupler.sch
multiplier.sch
notch.sch
opamp_gyrator.sch
pentode.sch
preregulator.sch
Puls3b.sch
resonance.sch
rf_osci.sch
rgummel.sch
sawtooth-1.sch
sawtooth-2.sch
sawtooth-3.sch
sawtooth-discreet.sch
schmitt.sch
selective_amp.sch
shot.sch
singleOPV.sch
single_balanced.sch
SmithChartTest.sch
stab.sch
supply.sch
swr_meter.sch
sym_osci.sch
time_resistor.sch
triode.sch
VCO_100.sch
wilkinson.sch
X2_100_Bipolar.sch
X5_500.sch
)

INSTALL( FILES ${DIST_EXAMPLES_DATA} DESTINATION share/${QUCS_NAME}/examples )
